syntax="proto3";

option csharp_namespace="gRoom.grpc.Messages";

package gRoomClient;

message RoomRegistrationRequest
{
    string room_name = 1;
}

message RoomRegistrationResponse
{
    int32 room_id = 1;
}

service GRoom{
    rpc RegisterationToRoom(RoomRegistrationRequest) returns(RoomRegistrationResponse);
}

